2012-01-15  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.4 released.

	* tramp-sh.el (tramp-remote-path): Set tramp-autoload cookie.

2012-01-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add "/opt/bin" and "/opt/sbin".
	(tramp-find-shell): Rearrange implementation.
	(tramp-find-inline-compress): Cache the compress commands in the
	process cache.
	(tramp-get-inline-compress): Read connection properties from the
	process cache.

2011-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Move check for busybox ...
	(tramp-find-shell): ... here.  Simplify implementation.
	(tramp-remote-coding-commands): Make the test command an extra slot.
	(tramp-find-inline-encoding): Cache the coding commands in the
	process cache.  Apply test command on the remote side, if defined.
	(tramp-get-inline-coding): Read connection properties from the
	process cache.

2011-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-shell): Set "remote-shell" property also
	for alternative shells.
	(tramp-open-connection-setup-interactive-shell): Check, whether
	the shell is a busybox.
	(tramp-send-command): Don't suppress multiple prompts for
	busyboxes, it hurts.

2011-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-file-exists-command): Spelling fixes.
	(tramp-remote-coding-commands): Check "test -c /dev/stdout".  If
	failing, a regular file would be written otherwise.  Reported by
	Dmitry Kurochkin <dmitry.kurochkin@gmail.com>.
	(tramp-find-inline-encoding): Embed checks in parentheses.

2011-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Require 'cl.
	(tramp-enter-password): Remove it.  Move implementation ...
	(tramp-action-password): ... here.
	(tramp-make-tramp-temp-file, tramp-read-passwd)
	(tramp-clear-passwd, tramp-time-less-p, tramp-time-diff): Set
	tramp-autoload cookie.
