@@ -1,3 +1,14 @@
+2012-01-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-methods, tramp-rsh-end-of-line): Remove
+	`tramp-password-end-of-line' from docstring.
+	(tramp-default-password-end-of-line): Remove defcustom.
+	(tramp-local-end-of-line): New defcustom.
+	(tramp-action-login, tramp-action-password, tramp-action-yesno)
+	(tramp-action-yn, tramp-action-terminal): Use it.  (Bug#10530)
+
+	* tramp-sh.el (tramp-methods): Do not use `tramp-password-end-of-line'.
+
 2012-01-15  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.2.4 released.
